--- a/style.css
+++ b/style.css
@@ -4,7 +4,20 @@
     --theme-color:#28BCB2;
 }
 
+img{
+    height: auto;
+    width: 600px;
+}
 
+.resumetext{
+padding-top: 3rem;
+padding-bottom: 2rem;
+font-size: 1.5em;
+    max-width: 35em;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1000px;
+}
 .container{
     height: 5rem;
     margin: 0 auto;
