--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ a{
 .section {
     position: relative;
     padding-top: 4rem;
-    padding-bottom: 4rem;
+    
     
 }
 
@@ -131,6 +131,15 @@ z-index: 2;
     max-width: 11em
 }
 
+.blog__title{
+    margin-top: 0;
+    font-size: 3rem;
+    color: #333c66;
+    line-height: 45pt;
+    font-weight: 800;
+    letter-spacing: -.02em;
+    max-width: 15em
+}
 .hero__title-intro {
     margin-bottom: 3rem;
     color: var(--theme-color);
@@ -147,12 +156,12 @@ z-index: 2;
     
 }
 
+
 h2{
     text-align: center;
     height: 5rem;
-    padding-top: 2em ;
-    margin-top: 3rem;
-    padding: 0 1.5rem;
+    
+    padding: 3rem 1rem 0rem 1rem;
     font-size: 3rem;
     color: #28BCB2;
     
@@ -235,24 +244,26 @@ font-weight: 400;
     display: flex;
 }
 .footer__section{
-    margin-left: 4em;
-    margin-top: 1em;
+    
+    padding-top: 1em;
+    margin-bottom: 1em;
+    
     font-weight: 500 ;
 font-size: 1.5em;
 color: ivory;
     margin-bottom: 0px;
-    display: flex;
+    display: block;
     
 }
 .footer__social-list{
     margin-top: 1.1em;
-    padding-left: 52em;
+    padding-left: 0;
     list-style: none;
     display: inline-flex;
 }
 .footer__social-link{
     text-decoration: none;
-    padding: 20px;
+    padding: 10px;
   
 }
 .footer__social-icon{
