--- a/style.css
+++ b/style.css
@@ -6,10 +6,7 @@
     --pirate-yellow:#283618;
 }
 
-img{
-    height: auto;
-    width: 600px;
-}
+
 
 .mid-logo{
     padding-right: 3rem;
@@ -27,251 +24,6 @@ img{
     letter-spacing: -.02em;
     max-width: 18em
 }
-
-/*------------------------------------------------------minion---------------------------------------------------- */
-.header-minion{
-    color: #fcc100;
-    padding-top: 1.5rem;
-}
-
-
-.minions-header-links{
-    color: #fcc100;
-}
-.first_name-minion {
-    fill: var(--minion-yellow)
-}
-.last_name-minion{
-    fill: #fcc100;
-}
-.thghttext-minion{
-    padding-top: 2rem;
-    margin-bottom: 10rem;
-    font-size: 2rem;
-    color: #333c66;
-    line-height: auto;
-    font-weight: 800;
-    letter-spacing: -.02em;
-    max-width: 18em
-}
-#h2-ts{
-    color: #fcc100;
-}
-.thghtext-2-minion{
-    color: var(--minion-yellow);
-}
-
-#inpText {
-    width: 85%;
-    height: 20vh;
-    display: block;
-    margin: 1rem;
-    padding: 1rem;
-    font-size: 2rem;
-    text-align: center;
-    font-family: 'Montserrat';
-    border: 1px solid rgb(250, 212, 0);
-}
-.output {
-    border: 1px solid rgb(250, 212, 0);
-    height: 20vh;
-    width: 85%;
-    margin: auto;
-    padding-bottom: 1rem;
-    font-style: normal;
-    font-size: 2rem;
-}
-
-.minions-t{
-    font-family: 'Montserrat',san-serif;
-    padding-bottom: 5rem;
-    margin: 0 8rem;
-}
-
-#translateBtn {
-    font-family: 'Montserrat';
-    font-weight: 600;
-    border: none;
-    margin: 1rem 20rem;
-    padding: 1rem;
-    font-size: 1.3rem;
-    border-radius: .3rem;
-    letter-spacing: 1px;
-}
-
-#translateBtn:hover {
-    background-color: #F1B714;
-    font-weight: 700;
-}
-
-.footer-minion{
-    margin: 0px;
-        background-color: var(--minion-yellow);
-
-}
-.hero-minions__title-intro {
-    margin-bottom: 3rem;
-    color: #fcc100;
-    font-weight: 700;
-    letter-spacing: -.02em;
-    max-width: 15em
-}
-
-
-/*------------------------------------------------------minions--over------------------------------------------------ */
-
-
-
-/*------------------------------------------------------pirate---------------------------------------------------- */
-small{
-    margin-bottom:-55pt ;
-    font-size: 16pt;
-    padding-left:1rem ;
-}
-.header-pirate{
-    color: #283618;
-    padding-top: 1.5rem;
-}
-
-
-.pirates-header-links{
-    color: #283618;
-}
-.first_name-pirate {
-    fill: var(--pirate-yellow)
-}
-.last_name-pirate{
-    fill: #283618;
-}
-.thghttext-pirate{
-    padding-top: 2rem;
-    margin-bottom: 10rem;
-    font-size: 2rem;
-    color: #333c66;
-    line-height: auto;
-    font-weight: 800;
-    letter-spacing: -.02em;
-    max-width: 18em
-}
-#h2-ts{
-    color: #283618;
-}
-.thghtext-2-pirate{
-    color: var(--pirate-yellow);
-}
-
-#inpText {
-    width: 85%;
-    height: 20vh;
-    display: block;
-    margin: 1rem;
-    padding: 1rem;
-    font-size: 2rem;
-    text-align: center;
-    font-family: 'Montserrat';
-    border: 1px solid var(--pirate-yellow);
-}
-.output {
-    border: 1px solid var(--pirate-yellow);
-    height: 20vh;
-    width: 85%;
-    margin: auto;
-    padding-bottom: 1rem;
-    font-style: normal;
-    font-size: 2rem;
-}
-
-.pirates-t{
-    font-family: 'Montserrat',san-serif;
-    padding-bottom: 5rem;
-    margin: 0 8rem;
-}
-
-#translateBtn-p {
-    font-family: 'Montserrat';
-    font-weight: 600;
-    border: none;
-    margin: 1rem 20rem;
-    padding: 1rem;
-    font-size: 1.3rem;
-    border-radius: .3rem;
-    letter-spacing: 1px;
-}
-
-#translateBtn-p:hover {
-    color: #fff;
-    background-color: #0a5e23;
-    font-weight: 700;
-}
-
-.footer-pirate{
-    margin: 0px;
-        background-color: var(--pirate-yellow);
-
-}
-
-.hero-pirates__title-intro {
-    margin-bottom: 3rem;
-    color: #283618;
-    font-weight: 700;
-    letter-spacing: -.02em;
-    max-width: 15em
-}
-
-.pirate__title{
-    margin-top: 0;
-    font-size: 3rem;
-    color: #21bd3b;
-    line-height: 45pt;
-    font-weight: 800;
-    letter-spacing: -.02em;
-    max-width: 15em
-}
-
-
-/*------------------------------------------------------pirates--over------------------------------------------------ */
-
-
-
-/*------------------------------------------------------projects---------------------------------------------------- */
-.h2-projects{
-    font-weight: 700;
-    text-align: left;
-height: 5rem;
-padding: 4rem 1rem 0rem 5rem;
-font-size: 3rem;
-color: #28BCB2;
-}
-
-.main__title-intro {
-    margin-bottom: 3rem;
-    color: var(--theme-color);
-    font-weight: 700;
-    letter-spacing: -.02em;
-    max-width: 13rem
-}
-
-
-.projects-wrapper {
-    display: grid;
-    width:100%;
-    height:100%;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-items: center;
-    justify-items: center;
-    color: white;
-
-}
-
-
-
-
-/*------------------------------------------------------projects--over------------------------------------------------ */
-
-
-
-
-
 
 
 
@@ -422,18 +174,32 @@ z-index: 2;
 
 
 
-
+.info{
+    padding-bottom: 3rem;
+}
 
 
 .abouttext{
-    font-size: 1.5em;
+    font-size: 1.3rem;
     max-width: 35em;
     margin-left: auto;
     margin-right: auto;
     max-width: 1000px;
+    padding-top: 11rem;
+    padding-bottom: 2rem;
     
 }
 
+.abouttext2{
+    font-size: 1.3rem;
+    max-width: 35em;
+    text-justify: auto;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 700px;
+    padding-bottom: 3rem;
+    
+}
 
 h2{
     text-align: center;
@@ -450,7 +216,7 @@ h2{
     background-color: #f5f5f5;
 }
 .wrapper {
-    padding: 0 220px;
+    padding: 0 22rem 6rem 22rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
