--- a/style.css
+++ b/style.css
@@ -216,9 +216,11 @@ h2{
     background-color: #f5f5f5;
 }
 .wrapper {
-    padding: 0 22rem 6rem 22rem;
+    
     display: grid;
     grid-template-columns: 1fr 1fr;
+    max-width: 1200px;
+    margin: auto;
   }
   
 .blog-wrapper{
