--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ z-index: 2;
     margin-right: auto;
     max-width: 700px;
     padding-bottom: 3rem;
-    
+    color: aliceblue;
 }
 
 h2{
@@ -213,7 +213,7 @@ h2{
 
 .technicalskillbg{
     padding:20px auto;
-    background-color: #f5f5f5;
+    background-color: #03232b;
 }
 .wrapper {
     
@@ -221,6 +221,7 @@ h2{
     grid-template-columns: 1fr 1fr;
     max-width: 1200px;
     margin: auto;
+    padding-bottom: 50px;
   }
   
 .blog-wrapper{
@@ -248,18 +249,18 @@ grid-template-columns: 1fr 1fr;
     display: inline-block;
 padding: .35em .6em;
 border-radius: .25rem;
-background-color: rgba(51,61,102,.07);
+background-color: rgba(30, 48, 91, 0.41);
 line-height: 1;
 white-space: nowrap;
 font-weight: 400;
 font-size: .875rem;
-color: rgba(51,61,102,.8);
+color: rgba(235, 253, 253, 0.6);
 }
 
 
 h3{
     font-size: 2.1rem;
-    color: #333c66;
+    color: ghostwhite;
 }
 .img-blog{
     max-width: 650px;
@@ -298,7 +299,7 @@ color: rgba(51,61,102,.8);
 .skills-desc{
     font-size: 1.25rem;
     margin-bottom: 1.5rem;
-    color: #5b687b;
+    color: #ebf9f7;;
 line-height: 1.5;
 font-weight: 400;
 }
