--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800;900&display=swap');
+@media only screen and (max-width: 1920px) {
+    
 
 :root{
     --theme-color:#28BCB2;
@@ -97,6 +99,50 @@ a{
 .navbar__links-item:not(:last-child) {
     padding-right: 2rem
 }
+
+.navbar-links-atag {
+
+    color: #28BCB2;
+    text-decoration: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+.navbar-links-atag:hover {
+
+    padding: .45em .6em;
+    border-radius: .25rem;
+    background-color: rgba(40, 188, 178);
+    font-weight: 600;
+    font-size: .975rem;
+    color: rgba(255, 255, 255);
+    transition: ease-out .2s;
+}
+
+
+.navbar-links-atag:active {
+    margin-left: .5rem;
+    display: inline-block;
+    padding: .35em .6em;
+    border-radius: .25rem;
+    background-color: rgba(51, 61, 102, .07);
+    line-height: 1;
+    white-space: nowrap;
+    font-weight: 600;
+    font-size: .975rem;
+    color: rgba(51, 61, 102, .8);
+
+
+}
+
+
+
+
+
+
+
 
 
 .section {
@@ -311,82 +357,146 @@ font-weight: 400;
 
 
 
+/* footer starts-------------------------------------------------------------------------- */
 
 
 
 
-
-.footer{
+.footer {
     margin: 0px;
-        background-color: var(--theme-color);
+    background-color: var(--theme-color);
 
 }
 
-.footer__inner{
-    margin:0;
+.footer-container {
+    margin: 0 auto;
+    max-width: 1400px;
+    padding: 0 1.5rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__inner {
+    margin: 0;
     padding: em;
     display: flex;
 }
-.footer__section{
-    
+
+.footer__section {
+
     padding-top: 1em;
     margin-bottom: 1em;
-    
-    font-weight: 500 ;
-font-size: 1.5em;
-color: ivory;
+
+    font-weight: 500;
+    font-size: 1.5em;
+    color: ivory;
     margin-bottom: 0px;
     display: block;
-    
+
 }
-.footer__social-list{
+
+.footer__social-list {
     margin-top: 1.1em;
     padding-left: 0;
     list-style: none;
     display: inline-flex;
 }
-.footer__social-link{
+
+.footer__social-link {
     text-decoration: none;
     padding: 10px;
-  
+
 }
-.footer__social-icon{
-    height: 40px;
+
+.footer__social-icon {
+    height: 32px;
     color: white;
     fill: #fff;
-    
+
 }
 
-.footer__social-icon:hover{
+.footer__social-icon:hover {
     fill: #333c66;
-    color:#333c66
+    color: #333c66
 }
-a:hover {
-    margin-left: .5rem;
-    display: inline-block;
-    padding: .35em .6em;
-    border-radius: .25rem;
-    background-color: rgba(51,61,102,.07);
-    white-space: nowrap;
-    font-weight: 600;
-    font-size: .975rem;
-    color: rgba(51,61,102,.8);
-    
-    transition: ease-out .2s;
-  }
 
 
-  a:active {
-    margin-left: .5rem;
-    display: inline-block;
-    padding: .35em .6em;
-    border-radius: .25rem;
-    background-color: rgba(51,61,102,.07);
-    line-height: 1;
-    white-space: nowrap;
-    font-weight: 600;
-    font-size: .975rem;
-    color: rgba(51,61,102,.8);
+
+
+/* foooter ended------------------------------------------------------------------------------------------------------------ */
+
+
+
+/* hamburger menu  */
+.hamburger {
+    display: none;
+}
+
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: #28BCB2;
+}
+/* hamburger menu */
+}
+
+
+
+
+
+
+
+@media only screen and (max-width: 640px) {
+    :root{
+        
+            overflow-x: hidden;
+    }
+        .navbar__links {
+            z-index: 2;
     
+            position: fixed;
+            right: -125%;
+            top: 5rem;
+            flex-direction: column;
+            background-color: #03232b;
+            width: 100%;
+            border-radius: 10px;
+            text-align: left;
+            transition: 0.3s;
+            box-shadow:
+                0 10px 27px rgba(0, 0, 0, 0.05);
+        }
     
-  }
+        .navbar__links-item {
+    
+            margin: 2.5rem 0;
+        }
+    
+        .navbar__links.active {
+            right: -45%;
+        }
+    
+        .navbar__links-item:not(:last-child) {
+            padding-right: 0rem;
+        }
+    
+        .hamburger {
+            display: block;
+            cursor: pointer;
+        }
+    
+        .hamburger.active .bar:nth-child(2) {
+            opacity: 0;
+        }
+    
+        .hamburger.active .bar:nth-child(1) {
+            transform: translateY(8px) rotate(45deg);
+        }
+    
+        .hamburger.active .bar:nth-child(3) {
+            transform: translateY(-8px) rotate(-45deg);
+        }}
