--- a/style.css
+++ b/style.css
@@ -1,354 +1,148 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800;900&display=swap');
+
 @media only screen and (max-width: 1920px) {
-    
-
-:root{
-    --theme-color:#28BCB2;
-    --minion-yellow:#fcc100;
-    --pirate-yellow:#283618;
-}
 
 
-
-.mid-logo{
-    padding-right: 3rem;
-}
-
-.thghtext-2{
-    color: #28BCB2;
-}
-.thghttext{
-    padding-top: 8rem;
-    font-size: 1rem;
-    color: #333c66;
-    line-height: auto;
-    font-weight: 800;
-    letter-spacing: -.02em;
-    max-width: 18em
-}
-
-
-
-
-
-
-
-.resumetext{
-padding-top: 3rem;
-padding-bottom: 2rem;
-font-size: 1.5em;
-    max-width: 35em;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1000px;
-}
-.container{
-    height: 5rem;
-    margin: 0 auto;
-    max-width: 1200px;
-    padding: 0 1.5rem;
-
-}
-
-body {
-    margin: 0;
-    width: 100%;
-    min-width: 320px;
-    background-color: #fff;
-    font-family: Montserrat, sans-serif;
-    font-size: 1rem;
-    line-height: 1.5;
-    font-weight: 400;
-    -webkit-font-smoothing: antialiased}
-
-.header{
-    padding-top: 1.5rem;
-}
-.navbar {
-    height: 4rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #fff
-}
-
-.first_name {
-    fill: var(--theme-color)
-}
-
-.last_name {
-    fill: var(--theme-color)
-}
-
-a{
-    
-    color: #28BCB2;
-    text-decoration: none;
-}
-.navbar__links {
-    font-weight: 500;
-    text-decoration: none;
-    list-style: none;
-    display: flex;
-    
-}
-
-.navbar__links-item{
-    text-decoration: none;
-}
-.navbar__links-item:not(:last-child) {
-    padding-right: 2rem
-}
-
-.navbar-links-atag {
-
-    color: #28BCB2;
-    text-decoration: none;
-}
-
-a {
-    text-decoration: none;
-}
-
-.navbar-links-atag:hover {
-
-    padding: .45em .6em;
-    border-radius: .25rem;
-    background-color: rgba(40, 188, 178);
-    font-weight: 600;
-    font-size: .975rem;
-    color: rgba(255, 255, 255);
-    transition: ease-out .2s;
-}
-
-
-.navbar-links-atag:active {
-    margin-left: .5rem;
-    display: inline-block;
-    padding: .35em .6em;
-    border-radius: .25rem;
-    background-color: rgba(51, 61, 102, .07);
-    line-height: 1;
-    white-space: nowrap;
-    font-weight: 600;
-    font-size: .975rem;
-    color: rgba(51, 61, 102, .8);
-
-
-}
-
-
-
-
-
-
-
-
-
-.section {
-    position: relative;
-    padding-top: 4rem;
-    
-    
-}
-
-.section__container{
-    position: relative;
-z-index: 2;
-}
-
-
-
-.middle-content {
-    display: flex;
-    justify-content: center
-}
-
-.middle-text{
-
-    
-    display: block;
-     
+    :root {
+        --theme-color: #28BCB2;
+        --minion-yellow: #fcc100;
+        --pirate-yellow: #283618;
     }
 
-.hero_label {
 
-    display: block;
-    font-size:15pt ;
-    letter-spacing: .03em;
-    font-weight: 600;
-    text-transform: uppercase;
-    color: #8895bf
-}
 
-.profile-photo{
-    display: block;
-}
+    .mid-logo {
+        padding-right: 3rem;
+    }
 
-.centered-block{
-    margin-top: 10rem;
-    align-items: center;
-}
-.hero__title {
-    margin-top: 0;
-    font-size: 3rem;
-    color: #333c66;
-    line-height: 45pt;
-    font-weight: 800;
-    letter-spacing: -.02em;
-    max-width: 11em
-}
+    .thghtext-2 {
+        color: #28BCB2;
+    }
 
-.blog__title{
-    margin-top: 0;
-    font-size: 3rem;
-    color: #333c66;
-    line-height: 45pt;
-    font-weight: 800;
-    letter-spacing: -.02em;
-    max-width: 15em
-}
-.hero__title-intro {
-    margin-bottom: 3rem;
-    color: var(--theme-color);
-    font-weight: 700;
-    letter-spacing: -.02em;
-    max-width: 11em
-}
+    .thghttext {
+        padding-top: 8rem;
+        font-size: 1rem;
+        color: #333c66;
+        line-height: auto;
+        font-weight: 800;
+        letter-spacing: -.02em;
+        max-width: 18em
+    }
 
 
 
 
 
-.info{
-    padding-bottom: 3rem;
-}
 
 
-.abouttext{
-    font-size: 1.3rem;
-    max-width: 35em;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1000px;
-    padding-top: 11rem;
-    padding-bottom: 2rem;
-    
-}
+    .resumetext {
+        padding-top: 3rem;
+        padding-bottom: 2rem;
+        font-size: 1.5em;
+        max-width: 35em;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1000px;
+    }
 
-.abouttext2{
-    font-size: 1.3rem;
-    max-width: 35em;
-    text-justify: auto;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 700px;
-    padding-bottom: 3rem;
-    color: aliceblue;
-}
+    .container {
+        height: 5rem;
+        margin: 0 auto;
+        max-width: 1200px;
+        padding: 0 1.5rem;
 
-h2{
-    text-align: center;
-    height: 5rem;
-    
-    padding: 3rem 1rem 0rem 1rem;
-    font-size: 3rem;
-    color: #28BCB2;
-    
-}
+    }
 
-.technicalskillbg{
-    padding:20px auto;
-    background-color: #03232b;
-}
-.wrapper {
-    
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    max-width: 1200px;
-    margin: auto;
-    padding-bottom: 50px;
-  }
-  
-.blog-wrapper{
-    padding: 0 120px;
-display: grid;
-grid-template-columns: 1fr 1fr;
-}
-.no-bullets{
-    
-    list-style: none;
-    display: flex;
-  
-    
-}
+    body {
+        margin: 0;
+        width: 100%;
+        min-width: 320px;
+        background-color: #fff;
+        font-family: Montserrat, sans-serif;
+        font-size: 1rem;
+        line-height: 1.5;
+        font-weight: 400;
+        -webkit-font-smoothing: antialiased
+    }
 
-.no-bullets-small{
-    padding-left: 0;
+    .header {
+        padding-top: 1.5rem;
+    }
+
+    .navbar {
+        height: 4rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #fff
+    }
+
+    .first_name {
+        fill: var(--theme-color)
+    }
+
+    .last_name {
+        fill: var(--theme-color)
+    }
+
+    a {
+
+        color: #28BCB2;
+        text-decoration: none;
+    }
+
+    .navbar__links {
+        font-weight: 500;
+        text-decoration: none;
         list-style: none;
-    display: flex;
-  
-    
-}
-.nodejs-small-list{
-    margin-left: .5rem;
-    display: inline-block;
-padding: .35em .6em;
-border-radius: .25rem;
-background-color: rgba(30, 48, 91, 0.41);
-line-height: 1;
-white-space: nowrap;
-font-weight: 400;
-font-size: .875rem;
-color: rgba(235, 253, 253, 0.6);
-}
+        display: flex;
+
+    }
+
+    .navbar__links-item {
+        text-decoration: none;
+    }
+
+    .navbar__links-item:not(:last-child) {
+        padding-right: 2rem
+    }
+
+    .navbar-links-atag {
+
+        color: #28BCB2;
+        text-decoration: none;
+    }
+
+    a {
+        text-decoration: none;
+    }
+
+    .navbar-links-atag:hover {
+
+        padding: .45em .6em;
+        border-radius: .25rem;
+        background-color: rgba(40, 188, 178);
+        font-weight: 600;
+        font-size: .975rem;
+        color: rgba(255, 255, 255);
+        transition: ease-out .2s;
+    }
 
 
-h3{
-    font-size: 2.1rem;
-    color: ghostwhite;
-}
-.img-blog{
-    max-width: 650px;
-    height: auto;
-    max-height: 350px ;
-    align-self: center;
-    display: block;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 1rem;
-}
+    .navbar-links-atag:active {
+        margin-left: .5rem;
+        display: inline-block;
+        padding: .35em .6em;
+        border-radius: .25rem;
+        background-color: rgba(51, 61, 102, .07);
+        line-height: 1;
+        white-space: nowrap;
+        font-weight: 600;
+        font-size: .975rem;
+        color: rgba(51, 61, 102, .8);
 
-.blog-title{
-    line-height: 70px;
-    font-size: 4rem;
-    color: #333c66;
 
-}
-.blog-middle-content {
-    padding-top: 8rem;
-    display: flex;
-    justify-content: center
-}
-.blog-small-list{
-    margin-bottom: 2rem;
-    display: inline-block;
-padding: .55em .55em;
-border-radius: .25rem;
-background-color: rgba(51,61,102,.07);
-line-height: 1;
-white-space: nowrap;
-font-weight: 400;
-font-size: 1rem;
-color: rgba(51,61,102,.8);
-}
-.skills-desc{
-    font-size: 1.25rem;
-    margin-bottom: 1.5rem;
-    color: #ebf9f7;;
-line-height: 1.5;
-font-weight: 400;
-}
+    }
 
 
 
@@ -357,91 +151,315 @@ font-weight: 400;
 
 
 
-/* footer starts-------------------------------------------------------------------------- */
+
+    .section {
+        position: relative;
+        padding-top: 4rem;
+
+
+    }
+
+    .section__container {
+        position: relative;
+        z-index: 2;
+    }
+
+
+
+    .middle-content {
+        display: flex;
+        justify-content: center
+    }
+
+    .middle-text {
+
+
+        display: block;
+
+    }
+
+    .hero_label {
+
+        display: block;
+        font-size: 15pt;
+        letter-spacing: .03em;
+        font-weight: 600;
+        text-transform: uppercase;
+        color: #8895bf
+    }
+
+    .profile-photo {
+        display: block;
+    }
+
+    .centered-block {
+        margin-top: 10rem;
+        align-items: center;
+    }
+
+    .hero__title {
+        margin-top: 0;
+        font-size: 3rem;
+        color: #333c66;
+        line-height: 45pt;
+        font-weight: 800;
+        letter-spacing: -.02em;
+        max-width: 11em
+    }
+
+    .blog__title {
+        margin-top: 0;
+        font-size: 3rem;
+        color: #333c66;
+        line-height: 45pt;
+        font-weight: 800;
+        letter-spacing: -.02em;
+        max-width: 15em
+    }
+
+    .hero__title-intro {
+        margin-bottom: 3rem;
+        color: var(--theme-color);
+        font-weight: 700;
+        letter-spacing: -.02em;
+        max-width: 11em
+    }
 
 
 
 
-.footer {
-    margin: 0px;
-    background-color: var(--theme-color);
 
-}
-
-.footer-container {
-    margin: 0 auto;
-    max-width: 1400px;
-    padding: 0 1.5rem;
-    display: flex;
-    justify-content: space-between;
-}
-
-.footer__inner {
-    margin: 0;
-    padding: em;
-    display: flex;
-}
-
-.footer__section {
-
-    padding-top: 1em;
-    margin-bottom: 1em;
-
-    font-weight: 500;
-    font-size: 1.5em;
-    color: ivory;
-    margin-bottom: 0px;
-    display: block;
-
-}
-
-.footer__social-list {
-    margin-top: 1.1em;
-    padding-left: 0;
-    list-style: none;
-    display: inline-flex;
-}
-
-.footer__social-link {
-    text-decoration: none;
-    padding: 10px;
-
-}
-
-.footer__social-icon {
-    height: 32px;
-    color: white;
-    fill: #fff;
-
-}
-
-.footer__social-icon:hover {
-    fill: #333c66;
-    color: #333c66
-}
+    .info {
+        padding-bottom: 3rem;
+    }
 
 
+    .abouttext {
+        font-size: 1.3rem;
+        max-width: 35em;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1000px;
+        padding-top: 11rem;
+        padding-bottom: 2rem;
+
+    }
+
+    .abouttext2 {
+        font-size: 1.3rem;
+        max-width: 35em;
+        text-justify: auto;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 700px;
+        padding-bottom: 3rem;
+        color: aliceblue;
+    }
+
+    h2 {
+        text-align: center;
+        height: 5rem;
+
+        padding: 3rem 1rem 0rem 1rem;
+        font-size: 3rem;
+        color: #28BCB2;
+
+    }
+
+    .technicalskillbg {
+        padding: 20px auto;
+        background-color: #03232b;
+    }
+
+    .wrapper {
+
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        max-width: 1200px;
+        margin: auto;
+        padding-bottom: 50px;
+    }
+
+    .blog-wrapper {
+        padding: 0 120px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .no-bullets {
+
+        list-style: none;
+        display: flex;
 
 
-/* foooter ended------------------------------------------------------------------------------------------------------------ */
+    }
+
+    .no-bullets-small {
+        padding-left: 0;
+        list-style: none;
+        display: flex;
+
+
+    }
+
+    .nodejs-small-list {
+        margin-left: .5rem;
+        display: inline-block;
+        padding: .35em .6em;
+        border-radius: .25rem;
+        background-color: rgba(30, 48, 91, 0.41);
+        line-height: 1;
+        white-space: nowrap;
+        font-weight: 400;
+        font-size: .875rem;
+        color: rgba(235, 253, 253, 0.6);
+    }
+
+
+    h3 {
+        font-size: 2.1rem;
+        color: ghostwhite;
+    }
+
+    .img-blog {
+        max-width: 650px;
+        height: auto;
+        max-height: 350px;
+        align-self: center;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 1rem;
+    }
+
+    .blog-title {
+        line-height: 70px;
+        font-size: 4rem;
+        color: #333c66;
+
+    }
+
+    .blog-middle-content {
+        padding-top: 8rem;
+        display: flex;
+        justify-content: center
+    }
+
+    .blog-small-list {
+        margin-bottom: 2rem;
+        display: inline-block;
+        padding: .55em .55em;
+        border-radius: .25rem;
+        background-color: rgba(51, 61, 102, .07);
+        line-height: 1;
+        white-space: nowrap;
+        font-weight: 400;
+        font-size: 1rem;
+        color: rgba(51, 61, 102, .8);
+    }
+
+    .skills-desc {
+        font-size: 1.25rem;
+        margin-bottom: 1.5rem;
+        color: #ebf9f7;
+        ;
+        line-height: 1.5;
+        font-weight: 400;
+    }
 
 
 
-/* hamburger menu  */
-.hamburger {
-    display: none;
-}
 
-.bar {
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    background-color: #28BCB2;
-}
-/* hamburger menu */
+
+
+
+
+    /* footer starts-------------------------------------------------------------------------- */
+
+
+
+
+    .footer {
+        margin: 0px;
+        background-color: var(--theme-color);
+
+    }
+
+    .footer-container {
+        margin: 0 auto;
+        max-width: 1400px;
+        padding: 0 1.5rem;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .footer__inner {
+        margin: 0;
+        padding: em;
+        display: flex;
+    }
+
+    .footer__section {
+
+        padding-top: 1em;
+        margin-bottom: 1em;
+
+        font-weight: 500;
+        font-size: 1.5em;
+        color: ivory;
+        margin-bottom: 0px;
+        display: block;
+
+    }
+
+    .footer__social-list {
+        margin-top: 1.1em;
+        padding-left: 0;
+        list-style: none;
+        display: inline-flex;
+    }
+
+    .footer__social-link {
+        text-decoration: none;
+        padding: 10px;
+
+    }
+
+    .footer__social-icon {
+        height: 32px;
+        color: white;
+        fill: #fff;
+
+    }
+
+    .footer__social-icon:hover {
+        fill: #333c66;
+        color: #333c66
+    }
+
+
+
+
+    /* foooter ended------------------------------------------------------------------------------------------------------------ */
+
+
+
+    /* hamburger menu  */
+    .hamburger {
+        display: none;
+    }
+
+    .bar {
+        display: block;
+        width: 25px;
+        height: 3px;
+        margin: 5px auto;
+        -webkit-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+        background-color: #28BCB2;
+    }
+
+    /* hamburger menu */
 }
 
 
@@ -451,15 +469,17 @@ font-weight: 400;
 
 
 @media only screen and (max-width: 640px) {
-    :root{
-        
-            overflow-x: hidden;
+    :root {
+
+        overflow-x: hidden;
     }
+
     *,
-:after,
-:before {
- box-sizing:inherit;
-}
+    :after,
+    :before {
+        box-sizing: inherit;
+    }
+
     /* header */
     .navbar__links {
         z-index: 2;
@@ -474,7 +494,7 @@ font-weight: 400;
         text-align: left;
         transition: 0.3s;
         box-shadow:
-        -35px 30px 100px rgba(1, 26, 26, 0.38);
+            -35px 30px 100px rgba(1, 26, 26, 0.38);
     }
 
     .navbar__links-item {
@@ -507,62 +527,84 @@ font-weight: 400;
         transform: translateY(-8px) rotate(-45deg);
     }
 
-    
-/* header over */
-    
-.section {
-    position: relative;
-    padding-top: 6rem;
-}
-.middle-content {
 
-    display: block;
-    justify-content: center;
-}
+    /* header over */
+
+    .section {
+        position: relative;
+        padding-top: 0rem;
+    }
+
     
-    
+    .middle-content {
+
+        display: block;
+        justify-content: center;
+        padding-top: 2rem;
+        padding-bottom: calc(10vw + 2.5rem);
+        background-color: #d9faf765;
+    }
+
+
     .profile-photo {
-    display: none;
-    height: auto;
-}
-.centered-block {
-    margin: auto;
-    align-items: center;
-    padding-left: 1.5rem;
-}
-.hero_label {
-    display: block;
-    font-size: 1rem;
-    letter-spacing: .03em;
-    font-weight: 600;
-    text-transform: uppercase;
-    color: #8895bf;
-    
-    margin: initial;
-}
-.hero__title {
-    
+        display: none;
+        height: auto;
+    }
 
-    font-size: 1.875rem;
-    color: #333c66;
-    line-height: 1.375;
-    font-weight: 700;
-    letter-spacing: -.02em;
-    max-width: 11em;
-}
-.abouttext {color:#575757;
-    font-size: 1.15rem;
-    max-width: 17em;
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-    padding-top: 10rem;
-    padding-bottom: 2rem;
-    text-align: left;
-}
-    
-    
-    
-    
+    .centered-block {
+        margin: auto;
+        align-items: center;
+        padding-left: 1.5rem;
+    }
+
+    .hero:after {
+        content: "";
+        position: absolute;
+        bottom: 131.1rem;
+        left: 8px;
+        width: 100%;
+        height: 10vw;
+        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon fill='%23fff' points='0 100, 100 100, 100 0'/%3E%3C/svg%3E");
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+    }
+    }
+    .hero_label {
+        display: block;
+        font-size: 1rem;
+        letter-spacing: .03em;
+        font-weight: 600;
+        text-transform: uppercase;
+        color: #8895bf;
+
+        margin: initial;
+    }
+
+    .hero__title {
+
+
+        font-size: 1.875rem;
+        color: #333c66;
+        line-height: 1.375;
+        font-weight: 700;
+        letter-spacing: -.02em;
+        max-width: 11em;
+    }
+
+    .abouttext {
+        color: #575757;
+        font-size: 1.15rem;
+        max-width: 17em;
+        margin-left: 1.5rem;
+        margin-right: 1.5rem;
+        padding-top: 10rem;
+        padding-bottom: 2rem;
+        text-align: left;
+    }
+
+
+
+
     /* footer */
     .footer-container {
         margin: 0 auto;
@@ -571,6 +613,7 @@ font-weight: 400;
         display: block;
         justify-content: space-between;
     }
+
     .footer__section {
         padding-top: 1em;
         margin-bottom: 1em;
@@ -580,13 +623,16 @@ font-weight: 400;
         margin-bottom: 0px;
         display: block;
     }
+
     .footer__social-icon {
         height: 24px;
         color: white;
         fill: #fff;
     }
-    html, body {
+
+    html,
+    body {
         max-width: 100%;
         overflow-x: hidden;
     }
-    }
+}
