--- a/style.css
+++ b/style.css
@@ -560,7 +560,7 @@
     .hero:after {
         content: "";
         position: absolute;
-        bottom: 129.1rem;
+        bottom: 124.1rem;
         left: 8px;
         width: 100%;
         height: 15vw;
@@ -603,8 +603,75 @@
     text-align: left;
 }
 
+h2 {
+    text-align: center;
+    height: 5rem;
+    padding: 3rem 1rem 0rem 1rem;
+    font-size: 1.5rem;
+    color: #28BCB2;
+}
+.abouttext2 {
+    font-size: 1.15rem;
+    max-width: 17em;
+    text-justify: auto;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+    max-width: 700px;
+    padding-bottom: 3rem;
+    color: aliceblue;
+}
 
 
+.wrapper {
+    display: block;
+    grid-template-columns: 1fr 1fr;
+    max-width: 21em;
+    margin: 0;
+    padding-bottom: 50px;
+    text-align: justify;
+}
+
+
+h3 {
+    font-size: 1.1rem;
+    color: ghostwhite;
+}
+
+.skills-desc {
+    font-size: .9rem;
+    margin-bottom: 1.5rem;
+    color: #ebf9f7;
+    line-height: 1.5;
+    font-weight: 400;
+    margin-left: ;
+}
+.skills-title{
+    display: flex;
+    
+}
+.skills_logo{
+    display: none;
+}
+
+.skills_name{
+    
+    border-radius: .6rem;
+}
+.info {
+    padding-bottom: 0rem;
+}
+.nodejs-small-list {
+    margin-right: .5rem;
+    display: inline-block;
+    padding: .35em .6em;
+    border-radius: .25rem;
+    background-color: rgba(30, 48, 91, 0.41);
+    line-height: 1;
+    white-space: nowrap;
+    font-weight: 400;
+    font-size: .75rem;
+    color: rgba(235, 253, 253, 0.6);
+}
 
 /* footer */
 .footer-container {
