--- a/style.css
+++ b/style.css
@@ -224,9 +224,9 @@ font-size: 16px;
     }
 
     .social-navigation {
-        text-align: center;
+        text-align: right;
         margin-top: 9rem;
-        margin-left: 65rem;
+        margin-left: auto;
 
     }
 
