--- a/style.css
+++ b/style.css
@@ -532,7 +532,7 @@ background-color: #e6f1fb66;
     margin-top: 65px;
     margin-bottom: 295px;
 }
-    }
+    
 
     .social-media-color{
         color: #23c8bd;
@@ -733,7 +733,7 @@ background-color: #e6f1fb66;
     }
 
 
-    element {}
+   
 
     .social-name {
 
@@ -744,7 +744,13 @@ background-color: #e6f1fb66;
 
     }
 
+    .social-navigation {
+        text-align: center;
+        margin-top: 9rem;
+        margin-left: auto;
+      }
 }
+
 
 
 
@@ -919,7 +925,7 @@ background-color: #e6f1fb66;
         margin-right: 1.5rem;
         max-width: 700px;
         padding-bottom: 3rem;
-        color: aliceblue;
+        
     }
 
 
@@ -935,13 +941,13 @@ background-color: #e6f1fb66;
 
     h3 {
         font-size: 1.1rem;
-        color: ghostwhite;
+        
     }
 
     .skills-desc {
         font-size: .9rem;
         margin-bottom: 1.5rem;
-        color: #ebf9f7;
+       
         line-height: 1.5;
         font-weight: 400;
 
@@ -972,12 +978,12 @@ background-color: #e6f1fb66;
         display: inline-block;
         padding: .35em .6em;
         border-radius: .25rem;
-        background-color: rgba(30, 48, 91, 0.41);
+        
         line-height: 1;
         white-space: nowrap;
         font-weight: 400;
         font-size: .75rem;
-        color: rgba(235, 253, 253, 0.6);
+        
     }
 
     /* footer */
